components/hac-boot/proxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hac-proxy
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hac-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hac-proxy
    spec:
      containers:
      - env:
        - name: HJ_MODE
          valueFrom:
            secretKeyRef:
              key: mode
              name: hac-proxy
        - name: HJ_K8S
          valueFrom:
            secretKeyRef:
              key: k8surl
              name: hac-proxy
        - name: HJ_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: hac-proxy
        - name: HJ_KEYCLOAK
          valueFrom:
            secretKeyRef:
              key: keycloak
              name: hac-proxy
        - name: HJ_SSL
          valueFrom:
            secretKeyRef:
              key: ssl
              name: hac-proxy
        - name: HJ_PROXY_SSL
          valueFrom:
            secretKeyRef:
              key: proxyssl
              name: hac-proxy
        image: quay.io/jduimovich0/hac-proxy
        imagePullPolicy: Always
        name: hac-proxy
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp/certs
          name: cert
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: hac-proxy-cert
