components/hac-boot/proxy-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.beta.openshift.io/serving-cert-secret-name: hac-proxy-cert
    name: hac-proxy
  spec:
    ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      app: hac-proxy
    sessionAffinity: None
    type: ClusterIP
